other/b-d/check-nvidia-gpu/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-nvidia-gpus
status:
  ready: true
